--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -17,11 +17,10 @@ jobs:
           node-version: 20
 
       - name: Install Expo & EAS
-        run: |
-          npm install -g expo-cli eas-cli
+        run: npm install -g expo-cli eas-cli
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install --legacy-peer-deps
 
       - name: Build APK with EAS
         env:
