Fix: correct EAS buildType (app-bundle)

--- a/eas.json
+++ b/eas.json
@@ -8,7 +8,7 @@
     },
     "production": {
       "android": {
-        "buildType": "aab"
+        "buildType": "app-bundle"
       }
     }
   },
