--- a/package.json
+++ b/package.json
@@ -1,43 +1,38 @@
 {
   "name": "barista_pro",
-  "version": "1.1.0",
+  "version": "1.0.0",
   "private": true,
   "main": "expo/AppEntry.js",
   "scripts": {
-    "start": "expo start -c",
-    "web": "EXPO_USE_HERMES_WEB=false expo start --web --port 8084 -c",
+    "start": "expo start --tunnel",
     "android": "expo run:android",
-    "ios": "expo run:ios"
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "build": "eas build --platform android --profile preview"
   },
   "dependencies": {
-    "expo": "^54.0.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.1",
-    "react-native-web": "~0.21.0",
-    "@react-navigation/native": "^7.0.15",
-    "@react-navigation/bottom-tabs": "^7.0.10",
-    "@react-navigation/stack": "^7.0.10",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "~3.31.1",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-reanimated": "~3.10.1",
-    "@expo/vector-icons": "^14.0.0",
-    "expo-haptics": "~13.0.0",
+    "expo": "~54.0.0",
     "expo-sqlite": "~14.0.0",
+    "expo-haptics": "~13.0.0",
+    "expo-localization": "~15.0.1",
     "expo-image-picker": "~15.0.5",
     "expo-file-system": "~17.0.1",
     "expo-print": "~13.0.0",
     "expo-sharing": "~13.0.0",
-    "expo-localization": "~15.0.1",
-    "i18n-js": "^4.4.3",
-    "rss-parser": "^3.13.0",
-    "@react-native-async-storage/async-storage": "~2.0.0"
+    "@expo/vector-icons": "^14.0.0",
+    "@react-navigation/native": "^7.0.15",
+    "@react-navigation/bottom-tabs": "^7.0.10",
+    "@react-navigation/stack": "^7.0.10",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.1",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "~3.31.1",
+    "rss-parser": "^3.13.0"
   },
   "devDependencies": {
-    "typescript": "^5.6.2",
-    "@types/react": "^18.3.5",
-    "@types/react-native": "^0.73.0",
-    "babel-plugin-module-resolver": "^5.0.2"
+    "typescript": "^5.3.3"
   }
 }
