--- a/package.json
+++ b/package.json
@@ -5,34 +5,37 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start --tunnel",
+    "postinstall": "patch-package",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
     "build": "eas build --platform android --profile preview"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.0",
+    "@react-navigation/bottom-tabs": "^7.0.10",
+    "@react-navigation/native": "^7.0.15",
+    "@react-navigation/stack": "^7.0.10",
     "expo": "~54.0.0",
-    "expo-sqlite": "~14.0.0",
-    "expo-haptics": "~13.0.0",
-    "expo-localization": "~15.0.1",
-    "expo-image-picker": "~15.0.5",
     "expo-file-system": "~17.0.1",
+    "expo-haptics": "~13.0.0",
+    "expo-image-picker": "~15.0.5",
+    "expo-localization": "~15.0.1",
     "expo-print": "~13.0.0",
     "expo-sharing": "~13.0.0",
-    "@expo/vector-icons": "^14.0.0",
-    "@react-navigation/native": "^7.0.15",
-    "@react-navigation/bottom-tabs": "^7.0.10",
-    "@react-navigation/stack": "^7.0.10",
+    "expo-sqlite": "~14.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "~3.31.1",
+    "react-native-screens": "~4.18.0",
     "rss-parser": "^3.13.0"
   },
   "devDependencies": {
+    "patch-package": "^8.0.1",
+    "postinstall-postinstall": "^2.1.0",
     "typescript": "^5.3.3"
   }
 }
