fix: remove postinstall-postinstall to fix CI build

--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "1.0.0",
   "private": true,
   "main": "expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start --tunnel",
-    "postinstall": "patch-package",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web",
-    "build": "eas build --platform android --profile preview"
-  },
+ "scripts": {
+  "start": "expo start --tunnel",
+  "android": "expo run:android",
+  "ios": "expo run:ios",
+  "web": "expo start --web",
+  "postinstall": "patch-package || true",
+  "build": "eas build --platform android --profile preview --non-interactive"
+},
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/bottom-tabs": "^7.0.10",
@@ -35,7 +35,6 @@
   },
   "devDependencies": {
     "patch-package": "^8.0.1",
-    "postinstall-postinstall": "^2.1.0",
     "typescript": "^5.3.3"
   }
 }
