--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Install dependencies
         run: npm install --legacy-peer-deps
 
+      - name: Apply expo-sqlite patch
+        run: npx patch-package
+
       - name: Build APK with EAS
         env:
           EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
