--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -25,13 +25,14 @@ jobs:
       - name: Fix expo-sqlite import
         run: |
           SQLITE_INDEX="node_modules/expo-sqlite/build/index.js"
-          if grep -q "SQLiteDatabase" "$SQLITE_INDEX"; then
+           echo "Checking $SQLITE_INDEX..."
+           if grep -q "SQLiteDatabase" "$SQLITE_INDEX"; then
            echo "⚙️ Fixing expo-sqlite import path..."
-          sed -i 's|SQLiteDatabase|SQLite|g' "$SQLITE_INDEX"
+           sed -i 's|SQLiteDatabase|SQLite|g' "$SQLITE_INDEX"
+           echo "✅ expo-sqlite import fixed."
           else
-          echo "✅ expo-sqlite already fixed"
-           fi
-
+           echo "✅ expo-sqlite already correct."
+          fi
 
       - name: Apply expo-sqlite patch
         run: npx patch-package
