--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,25 +1,27 @@
-name: Android Build
+name: Android Build (APK)
 
 on:
-  workflow_dispatch:
+  workflow_dispatch: # запуск вручную через вкладку Actions
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Setup Node.js (v20)
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      - name: Install dependencies
-        run: npm install --legacy-peer-deps
+      - name: Install dependencies and EAS CLI
+        run: |
+          npm install --legacy-peer-deps
+          npm install eas-cli --save-dev
 
-      - name: Fix expo-sqlite import
+      - name: Fix expo-sqlite import (SQLiteDatabase bug)
         run: |
           SQLITE_INDEX="node_modules/expo-sqlite/build/index.js"
           echo "Checking $SQLITE_INDEX..."
@@ -31,7 +33,8 @@ jobs:
             echo "✅ expo-sqlite already correct."
           fi
 
-      - name: Build APK
-        run: eas build --platform android --profile preview --non-interactive
+      - name: Build APK via EAS
+        run: |
+          npx eas-cli build --platform android --profile preview --non-interactive
         env:
           EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
