--- a/eas.json
+++ b/eas.json
@@ -1,5 +1,7 @@
 {
-  "cli": { "version": ">=3.15.0" },
+  "cli": {
+    "version": ">= 11.0.0"
+  },
   "build": {
     "preview": {
       "android": {
