--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
+    "postinstall": "patch-package",
     "build": "eas build --platform android --profile preview --non-interactive"
   },
   "dependencies": {
@@ -34,6 +35,8 @@
   },
   "devDependencies": {
     "eas-cli": "^16.26.0",
+    "patch-package": "^8.0.1",
+    "postinstall-postinstall": "^2.1.0",
     "typescript": "^5.3.3"
   }
 }
