--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "barista_pro",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "private": true,
   "main": "expo/AppEntry.js",
   "scripts": {
-    "start": "expo start --tunnel",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web",
-    "postinstall": "patch-package",
-    "build": "eas build --platform android --profile preview --non-interactive"
-  },
+  "start": "expo start --tunnel",
+  "android": "expo run:android",
+  "ios": "expo run:ios",
+  "web": "expo start --web",
+  "postinstall": "patch-package || true",
+  "build": "eas build --platform android --profile preview --non-interactive"
+},
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/bottom-tabs": "^7.0.10",
@@ -23,7 +23,7 @@
     "expo-localization": "~15.0.1",
     "expo-print": "~13.0.0",
     "expo-sharing": "~13.0.0",
-    "expo-sqlite": "~14.0.0",
+    "expo-sqlite": "~14.0.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.1",
@@ -34,9 +34,13 @@
     "rss-parser": "^3.13.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
     "eas-cli": "^16.26.0",
     "patch-package": "^8.0.1",
-    "postinstall-postinstall": "^2.1.0",
     "typescript": "^5.3.3"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   }
 }
