--- a/.github/workflows/eas-android-preview.yml
+++ b/.github/workflows/eas-android-preview.yml
@@ -33,7 +33,8 @@ jobs:
 
       - name: Install dependencies and EAS CLI
         run: |
-          npm ci
+          echo "📦 Installing deps..."
+          npm install --legacy-peer-deps
           npm install -g eas-cli@latest
           npx expo --version
           npx eas-cli --version
