fix: remove expo-sqlite plugin (not a config plugin)

--- a/app.json
+++ b/app.json
@@ -1,33 +1,66 @@
 {
   "expo": {
-    "name": "barista_pro",
+    "name": "Barista Pro",
     "slug": "barista_pro",
     "version": "1.1.0",
     "orientation": "portrait",
+    "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
+    "scheme": "baristapro",
+    "owner": "msbrst",
+    "sdkVersion": "54.0.0",
+    "platforms": ["ios", "android"],
     "plugins": [
-      "expo-sqlite"
+      "expo-localization",
+      "expo-device",
+      "expo-updates",
+      [
+        "expo-build-properties",
+        {
+          "android": {
+            "compileSdkVersion": 34,
+            "targetSdkVersion": 34,
+            "minSdkVersion": 24,
+            "kotlinVersion": "1.9.25"
+          },
+          "ios": {
+            "deploymentTarget": "13.0"
+          }
+        }
+      ]
     ],
+    "updates": {
+      "url": "https://u.expo.dev/59f0b8e8-31a0-434a-9b85-5dc92fa4aae4",
+      "enabled": true,
+      "fallbackToCacheTimeout": 0
+    },
+    "runtimeVersion": {
+      "policy": "sdkVersion"
+    },
+    "assetBundlePatterns": ["**/*"],
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.msbrst.barista_pro",
+      "buildNumber": "1.1.0"
     },
     "android": {
-      "edgeToEdge": true,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.msbrst.barista_pro",
+      "versionCode": 11
     },
-    "web": {
-      "bundler": "metro",
-      "output": "static",
-      "favicon": "./assets/favicon.png"
+    "extra": {
+      "eas": {
+        "projectId": "59f0b8e8-31a0-434a-9b85-5dc92fa4aae4"
+      }
     }
   }
 }
