--- a/.github/workflows/eas-android-preview.yml
+++ b/.github/workflows/eas-android-preview.yml
@@ -13,14 +13,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 1️⃣ Получаем код
       - name: Checkout repo
         uses: actions/checkout@v4
 
+      # 2️⃣ Ставим Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
+      # 3️⃣ Кешируем зависимости
       - name: Cache node_modules
         uses: actions/cache@v4
         with:
@@ -31,6 +34,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-npm-
 
+      # 4️⃣ Устанавливаем зависимости и EAS CLI
       - name: Install dependencies and EAS CLI
         run: |
           echo "📦 Installing deps..."
@@ -39,6 +43,12 @@ jobs:
           npx expo --version
           npx eas-cli --version
 
+      # 5️⃣ Убеждаемся, что Expo плагины реально установлены
+      - name: Ensure required Expo plugins installed
+        run: |
+          npm install expo-device expo-localization expo-build-properties --legacy-peer-deps
+
+      # 6️⃣ Фиксим expo-sqlite (Expo SDK 54)
       - name: Fix expo-sqlite import path (SDK 54)
         run: |
           FILE=node_modules/expo-sqlite/build/index.js
@@ -49,12 +59,16 @@ jobs:
             echo "✅ expo-sqlite already uses /next API"
           fi
 
+      # 7️⃣ Expo prebuild (генерация android/ios)
       - name: Expo prebuild (native config)
+        env:
+          CI: 1
         run: |
-          npx expo prebuild --clean --non-interactive
+          npx expo prebuild --clean
           npx expo config --json
           npx expo doctor
 
+      # 8️⃣ Проверяем, что expo-sqlite реально существует
       - name: Verify SQLite module
         run: |
           if [ -f node_modules/expo-sqlite/build/next/SQLite.js ]; then
@@ -63,6 +77,7 @@ jobs:
             echo "❌ expo-sqlite missing!"; exit 1
           fi
 
+      # 9️⃣ Сборка Android APK (EAS Build Preview)
       - name: Run EAS Android build (Preview)
         env:
           EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
@@ -70,6 +85,7 @@ jobs:
         run: |
           npx eas-cli build --platform android --profile preview --non-interactive
 
+      # 🔟 Загружаем логи и артефакты (APK/AAB)
       - name: Upload build logs / artifacts
         if: always()
         uses: actions/upload-artifact@v4
