--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,40 +1,89 @@
-name: Android Build (APK)
+name: EAS Android Preview Build
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - main
+      - dev
+      - preview
 
 jobs:
-  build:
+  build-android:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      # 1. Забираем код
+      - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Setup Node.js 20.x
+      # 2. Ставим Node.js 20
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
+      # 3. Кеш npm и node_modules
+      - name: Cache node_modules
+        uses: actions/cache@v4
+        with:
+          path: |
+            node_modules
+            ~/.npm
+          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-npm-
+
+      # 4. Установка зависимостей и EAS CLI
       - name: Install dependencies
         run: |
-          npm install --legacy-peer-deps
-          npm install eas-cli --save-dev
+          npm ci
+          npm install -g eas-cli@latest
+          npx expo --version
+          npx eas-cli --version
 
-      - name: Fix expo-sqlite import issue
+      # 5. Патчим expo-sqlite (Expo SDK 54)
+      - name: Fix expo-sqlite import path
         run: |
-          SQLITE_INDEX="node_modules/expo-sqlite/build/index.js"
-          echo "Checking for missing SQLite module in expo-sqlite..."
-          if grep -q "SQLiteDatabase" "$SQLITE_INDEX"; then
-            echo "⚙️ Applying expo-sqlite fix..."
-            sed -i "s|SQLiteDatabase|SQLite|g" "$SQLITE_INDEX"
-            echo "✅ Fixed import path in expo-sqlite index.js"
+          FILE=node_modules/expo-sqlite/build/index.js
+          if grep -q "require('./SQLite')" "$FILE"; then
+            echo "🔧 Patching expo-sqlite import..."
+            sed -i "s|require('./SQLite')|require('./next/SQLite')|" "$FILE"
           else
-            echo "✅ expo-sqlite already correct."
+            echo "✅ expo-sqlite already uses /next API"
           fi
 
-      - name: Build APK via EAS
+      # 6. Expo prebuild — генерируем android/ios директории
+      - name: Expo prebuild (native config)
         run: |
-          npx eas-cli build --platform android --profile preview --non-interactive
+          npx expo prebuild --clean --non-interactive
+          npx expo config --json
+          npx expo doctor
+
+      # 7. Проверяем, что expo-sqlite существует
+      - name: Verify SQLite module
+        run: |
+          if [ -f node_modules/expo-sqlite/build/next/SQLite.js ]; then
+            echo "✅ expo-sqlite/next is present"
+          else
+            echo "❌ expo-sqlite missing!"; exit 1
+          fi
+
+      # 8. Собираем Android build (Preview)
+      - name: Run EAS Android build (Preview)
         env:
           EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
+          EAS_NO_VCS: 1
+        run: |
+          npx eas-cli build --platform android --profile preview --non-interactive
+
+      # 9. Загружаем артефакты и логи
+      - name: Upload build logs / artifacts
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: eas-android-preview-output
+          path: |
+            **/eas.log
+            .expo/
+            build/
