--- a/package.json
+++ b/package.json
@@ -4,39 +4,47 @@
   "private": true,
   "main": "expo/AppEntry.js",
   "scripts": {
-  "start": "expo start --tunnel",
-  "android": "expo run:android",
-  "ios": "expo run:ios",
-  "web": "expo start --web",
-  "postinstall": "patch-package || true",
-  "build": "eas build --platform android --profile preview --non-interactive"
-},
+    "start": "expo start --tunnel",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "postinstall": "patch-package || true",
+    "build": "eas build --platform android --profile preview --non-interactive"
+  },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.0",
+    "@expo/vector-icons": "^15.0.3",
     "@react-navigation/bottom-tabs": "^7.0.10",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.0.10",
     "expo": "~54.0.0",
-    "expo-file-system": "~17.0.1",
-    "expo-haptics": "~13.0.0",
-    "expo-image-picker": "~15.0.5",
-    "expo-localization": "~15.0.1",
-    "expo-print": "~13.0.0",
-    "expo-sharing": "~13.0.0",
-    "expo-sqlite": "~14.0.6",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.1",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "~4.18.0",
-    "rss-parser": "^3.13.0"
+    "expo-build-properties": "^0.11.1",
+    "expo-file-system": "~19.0.17",
+    "expo-haptics": "~15.0.7",
+    "expo-image-picker": "~17.0.8",
+    "expo-localization": "~17.0.7",
+    "expo-print": "~15.0.7",
+    "expo-sharing": "~14.0.7",
+    "expo-sqlite": "^14.0.6",
+    "expo-status-bar": "~3.0.8",
+    "i18n-js": "^4.5.1",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-rss-parser": "^1.5.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0",
-    "eas-cli": "^16.26.0",
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
+    "@babel/runtime": "^7.28.4",
+    "@types/react": "~19.1.10",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "js-tokens": "^9.0.1",
     "patch-package": "^8.0.1",
+    "sharp": "^0.34.5",
     "typescript": "^5.3.3"
   },
   "engines": {
