fix: update eas.json for Expo SDK 54

--- a/eas.json
+++ b/eas.json
@@ -1,6 +1,7 @@
 {
   "cli": {
-    "version": ">= 13.2.0"
+    "version": ">= 13.2.0",
+    "appVersionSource": "remote"
   },
   "build": {
     "preview": {
@@ -13,7 +14,24 @@
         "EXPO_USE_LOCAL_CLI": "1",
         "EXPO_NO_GIT_STATUS": "1",
         "EXPO_BARE": "1"
+      },
+      "cache": {
+        "disabled": true
+      }
+    },
+    "production": {
+      "developmentClient": false,
+      "distribution": "store",
+      "android": {
+        "buildType": "app-bundle"
+      },
+      "env": {
+        "EXPO_USE_LOCAL_CLI": "1",
+        "EXPO_NO_GIT_STATUS": "1"
       }
     }
+  },
+  "submit": {
+    "production": {}
   }
 }
