fix: enforce Node.js 20 in EAS builds

--- a/eas.json
+++ b/eas.json
@@ -18,6 +18,9 @@
       },
       "cache": {
         "disabled": true
+      },
+      "environment": {
+        "node": "20"
       }
     },
     "production": {
@@ -30,6 +33,9 @@
       "env": {
         "EXPO_USE_LOCAL_CLI": "1",
         "EXPO_NO_GIT_STATUS": "1"
+      },
+      "environment": {
+        "node": "20"
       }
     }
   },
