fix: correct environment name to node20

--- a/eas.json
+++ b/eas.json
@@ -19,7 +19,7 @@
       "cache": {
         "disabled": true
       },
-      "environment": "node=20"
+      "environment": "node20"
     },
     "production": {
       "developmentClient": false,
@@ -32,7 +32,7 @@
         "EXPO_USE_LOCAL_CLI": "1",
         "EXPO_NO_GIT_STATUS": "1"
       },
-      "environment": "node=20"
+      "environment": "node20"
     }
   },
   "submit": {
