--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-rss-parser": "^1.5.1",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-native-worklets": "^0.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
