--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.0.10",
     "expo": "~54.0.0",
-    "expo-build-properties": "^0.11.1",
+    "expo-build-properties": "~1.0.9",
     "expo-file-system": "~19.0.17",
+    "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image-picker": "~17.0.8",
     "expo-localization": "~17.0.7",
     "expo-print": "~15.0.7",
     "expo-sharing": "~14.0.7",
-    "expo-sqlite": "^14.0.6",
+    "expo-sqlite": "~16.0.9",
     "expo-status-bar": "~3.0.8",
     "i18n-js": "^4.5.1",
     "react": "19.1.0",
@@ -35,7 +36,7 @@
     "react-native-rss-parser": "^1.5.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-worklets": "^0.6.1"
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
