--- a/.github/workflows/android-gradle.yml
+++ b/.github/workflows/android-gradle.yml
@@ -1,4 +1,4 @@
-name: Android Build (GitHub-only: prebuild + Gradle)
+name: "Android Build (GitHub-only: prebuild + Gradle)"
 
 on:
   workflow_dispatch:
