fix(ci): use absolute keystore path in android-gradle.yml

--- a/.github/workflows/android-gradle.yml
+++ b/.github/workflows/android-gradle.yml
@@ -68,7 +68,7 @@ jobs:
 
       - name: Configure signing (gradle.properties)
         run: |
-          echo "MYAPP_UPLOAD_STORE_FILE=my-release-key.jks" >> android/gradle.properties
+          echo "MYAPP_UPLOAD_STORE_FILE=$PWD/android/app/my-release-key.jks" >> android/gradle.properties
           echo "MYAPP_UPLOAD_KEY_ALIAS=${{ secrets.ANDROID_KEY_ALIAS }}" >> android/gradle.properties
           echo "MYAPP_UPLOAD_STORE_PASSWORD=${{ secrets.ANDROID_KEYSTORE_PASSWORD }}" >> android/gradle.properties
           echo "MYAPP_UPLOAD_KEY_PASSWORD=${{ secrets.ANDROID_KEY_ALIAS_PASSWORD }}" >> android/gradle.properties
