--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -29,13 +29,46 @@ def rnVersion = getRNVersion()
  * React Native configuration block.
  */
 react {
-    entryFile = file(["node", "-e", "require('expo/scripts/resolveAppEntry')", projectRoot, "android", "absolute"].execute(null, rootDir).text.trim())
-    reactNativeDir = new File(["node", "--print", "require.resolve('react-native/package.json')"].execute(null, rootDir).text.trim()).getParentFile().getAbsoluteFile()
-    hermesCommand = new File(["node", "--print", "require.resolve('react-native/package.json')"].execute(null, rootDir).text.trim()).getParentFile().getAbsolutePath() + "/sdks/hermesc/%OS-BIN%/hermesc"
-    codegenDir = new File(["node", "--print", "require.resolve('@react-native/codegen/package.json', { paths: [require.resolve('react-native/package.json')] })"].execute(null, rootDir).text.trim()).getParentFile().getAbsoluteFile()
+    // ✅ Безопасное определение entryFile (фикс path='')
+    def entryPath = ["node", "-e", "require('expo/scripts/resolveAppEntry')", projectRoot, "android", "absolute"]
+        .execute(null, rootDir)
+        .text
+        .trim()
 
-    // Use Expo CLI to bundle the app
-    cliFile = new File(["node", "--print", "require.resolve('@expo/cli', { paths: [require.resolve('expo/package.json')] })"].execute(null, rootDir).text.trim())
+    if (!entryPath || entryPath.isEmpty()) {
+        println "[WARN] Expo entry file not resolved, using fallback index.js"
+        entryPath = "$rootDir/../index.js"
+    }
+
+    entryFile = file(entryPath)
+
+    reactNativeDir = new File(
+        ["node", "--print", "require.resolve('react-native/package.json')"]
+            .execute(null, rootDir)
+            .text
+            .trim()
+    ).getParentFile().getAbsoluteFile()
+
+    hermesCommand = new File(
+        ["node", "--print", "require.resolve('react-native/package.json')"]
+            .execute(null, rootDir)
+            .text
+            .trim()
+    ).getParentFile().getAbsolutePath() + "/sdks/hermesc/%OS-BIN%/hermesc"
+
+    codegenDir = new File(
+        ["node", "--print", "require.resolve('@react-native/codegen/package.json', { paths: [require.resolve('react-native/package.json')] })"]
+            .execute(null, rootDir)
+            .text
+            .trim()
+    ).getParentFile().getAbsoluteFile()
+
+    cliFile = new File(
+        ["node", "--print", "require.resolve('@expo/cli', { paths: [require.resolve('expo/package.json')] })"]
+            .execute(null, rootDir)
+            .text
+            .trim()
+    )
     bundleCommand = "export:embed"
 
     if (rnVersion >= versionToNumber(0, 75, 0)) {
